# VennCV

./: .gitignore  Cargo.toml  README.md  app_settings.yaml
src/: app.rs  main.rs  models.rs
